Make sure sorted arrows are always visible in table headings
git-svn-id: svn://gallium.openminds.be/opt/svn/fork2/trunk@370 869247f0-a1f3-4d5c-9449-4b73fc252fa6

--- a/default_www/backend/core/layout/css/screen.css
+++ b/default_www/backend/core/layout/css/screen.css
@@ -621,10 +621,9 @@ td#contentHolder {
 	color: #000;
 }
 
-
 .datagrid th a,
 .datagrid th span {
-	padding: 0 6px;
+	padding: 0 18px 0 6px;
 	display: block;
 }
 
